# embedcpp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
